delete btn spacing fix

--- a/apps/web-giddh/src/app/new-inventory/component/stock-create-edit/stock-create-edit.component.scss
+++ b/apps/web-giddh/src/app/new-inventory/component/stock-create-edit/stock-create-edit.component.scss
@@ -224,7 +224,6 @@
 
                 .upper-common-form-label-field {
                     margin-left: 5px;
-                    margin-top: 10px;
 
                     .under-group-field-button-wrapper {
                         display: flex;
